<resources>
    <string name="app_name">TheDot</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="atras">Atras</string>
    <string name="logo">Logo</string>
    <string name="trazado">trazado</string>
    <string name="theArtToSurvive">The art to survive is to believe you can always start over</string>
    <string name="inicia">inicia</string>
    <string name="sesion">sesión</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="olvidaste_contra">¿Olvidaste tu Contraseña?</string>
    <string name="configuracion">Configuración</string>
    <string name="nombre">Nombre</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="ubicacion">Ubicación</string>
    <string name="ocupacion">Ocupación</string>
    <string name="cambiarContrasenia">Cambiar Constraseña</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="journal">Journal</string>
    <string name="comoEstasHoy">¿Cómo estás hoy?</string>
    <string name="intencionesDia">Intenciones del Día</string>
    <string name="intencionesSemana">Intenciones de la Semana</string>
    <string name="misDias">Mis Días</string>
    <string name="agenda">Agenda</string>
    <string name="agendaCita">*** AgendaCita</string>
    <string name="comoestashoy1">*¿Cómo</string>
    <string name="comoestashoy2">estas hoy?</string>
    <string name="intencionesdia">Intenciones del día</string>
    <string name="intencionesdia1">*Intenciones</string>
    <string name="intencionesdia2">del día</string>
</resources>