<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_brown">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_trazado"
        app:srcCompat="@drawable/logo_xxxdpi_06"
        android:contentDescription="@string/logo"/>

    <ImageView
        android:id="@+id/img_trazado1"
        android:layout_width="152dp"
        android:layout_height="335dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trazado2_xxxdpi_06"
        android:contentDescription="@string/trazado"/>

    <ImageView
        android:id="@+id/img_trazado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/simbolo_xdpi_04"
        android:contentDescription="@string/trazado"/>

    <TextView
        android:id="@+id/tv_leyenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/theArtToSurvive"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <ImageView
        android:id="@+id/img_trazado2"
        android:layout_width="101dp"
        android:layout_height="233dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/trazado1_xxxdpi_06"
        android:contentDescription="@string/trazado"/>

    <Button
        android:id="@+id/btn_iniciaSesion"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="85dp"
        android:text="@string/iniciarSesion"
        android:textColor="@color/white"
        android:background="@drawable/boton_redondo"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_leyenda" />

    <Button
        android:id="@+id/btn_crearCuenta"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/crearCuenta"
        android:textColor="@color/white"
        android:background="@drawable/boton_redondo"
        android:backgroundTint="@color/light_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_iniciaSesion" />

</androidx.constraintlayout.widget.ConstraintLayout>