<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".journal"
    android:background="@color/light_brown">

    <TextView
        android:id="@+id/tv_Journal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/journal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_Journal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/regresar1_mdpi_02" />

    <Button
        android:id="@+id/btn_comoEstasHoy"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/boton_redondo_journal"
        android:text="@string/comoEstasHoy"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Journal" />

    <Button
        android:id="@+id/btn_intencionesDia"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/boton_redondo_journal"
        android:backgroundTint="@color/light_brown"
        android:text="@string/intencionesDia"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_comoEstasHoy" />

    <Button
        android:id="@+id/btn_intencionesSemana"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/boton_redondo_journal"
        android:text="@string/intencionesSemana"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_intencionesDia" />

    <Button
        android:id="@+id/btn_misDias"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/misDias"
        android:background="@drawable/boton_redondo_journal"
        android:backgroundTint="@color/light_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_intencionesSemana" />

    <ImageView
        android:id="@+id/img_jour_trazado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_misDias"
        app:srcCompat="@drawable/simbolo_xdpi_04" />
</androidx.constraintlayout.widget.ConstraintLayout>