<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    tools:context=".howareyoutoday">

    <TextView
        android:id="@+id/tv_jour_ceh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="155dp"
        android:backgroundTint="@color/light_brown"
        android:text="@string/journal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_ceh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_jour_ceh"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/regresar1_mdpi_02" />

    <TextView
        android:id="@+id/tv_ceh1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/comoestashoy1"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:layout_marginBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jour_ceh" />

    <TextView
        android:id="@+id/tv_ceh2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comoestashoy2"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:includeFontPadding="false"
        android:layout_marginBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ceh1" />

    <EditText
        android:id="@+id/et_ceh"
        android:layout_width="331dp"
        android:layout_height="459dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/editext_redondo_journal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ceh2" />

    <TextView
        android:id="@+id/tv_fh_ceh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/comoEstasHoy"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>